--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ jobs:
       testResultsFormat: VSTest
       testResultsFiles: '**/*.trx'
       
-# - job: macOS
+#- job: macOS
 #  pool:
 #    vmImage: 'macOS-10.13'
 #  steps:
@@ -72,23 +72,22 @@ jobs:
       testResultsFormat: VSTest
       testResultsFiles: '**/*.trx' 
 
-- job: LinuxRelease
-  pool:
-    vmImage: 'Ubuntu 16.04'
-  variables:
-    buildConfiguration: 'Release'
-  steps:
-  - task: DotNetCoreInstaller@0
-    inputs:
-      packageType: 'sdk'
-      version: '2.2.401'
-  - script: dotnet build --configuration $(buildConfiguration)
-    displayName: 'dotnet build $(buildConfiguration)'
-  - script: ./run-tests.sh
-    displayName: 'run tests'    
-  - task: PublishTestResults@2
-    displayName: 'Publish Test Results **/*.trx'
-    condition: succeededOrFailed()
-    inputs:
-      testResultsFormat: VSTest
-      testResultsFiles: '**/*.trx' 
+#- job: LinuxRelease
+#  pool:
+#    vmImage: 'Ubuntu 16.04'
+#  variables:
+#    buildConfiguration: 'Release'
+#  steps:
+#  - task: DotNetCoreInstaller@0
+#    inputs:
+#      packageType: 'sdk'
+#      version: '2.2.401'
+#  - script: dotnet build --configuration $(buildConfiguration)
+#    displayName: 'dotnet build $(buildConfiguration)'
+#  - script: ./run-tests.sh
+#    displayName: 'run tests'    
+#  - task: PublishTestResults@2
+#    displayName: 'Publish Test Results **/*.trx'
+#    condition: succeededOrFailed()
+#    inputs:
+#      testResultsFormat: VSTest
