--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,13 @@
 trigger:
 - master
 
+schedules:
+- cron: "0,30 * * * *"
+  displayName: Every 30 mins
+  branches:
+    include:
+    - master
+
 jobs:
 - job: RunsOnServer
   pool: Server
