--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,10 @@ schedules:
     - master
 
 jobs:
+- powershell: |
+  [string]$version="$(Build.Repository.Name)_SomeCustomData_$(Build.BuildId)"
+  Write-Output "##vso[build.updatebuildnumber]$(Version)"
+  displayName: Set Build Number
 - job: RunsOnServer
   pool: Server
   steps:
