--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,12 +12,13 @@ schedules:
   branches:
     include:
     - master
-
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      [string]$version="$(Build.Repository.Name)_SomeCustomData_$(Build.BuildId)"
+      Write-Output "##vso[build.updatebuildnumber]$(Version)"
 jobs:
-- powershell: |
-  [string]$version="$(Build.Repository.Name)_SomeCustomData_$(Build.BuildId)"
-  Write-Output "##vso[build.updatebuildnumber]$(Version)"
-  displayName: Set Build Number
 - job: RunsOnServer
   pool: Server
   steps:
