Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,8 @@ schedules:
 - cron: "0,30 * * * *"
   displayName: Every 30 mins
   branches:
-    include:
+    include: 
+    - master
 
 stages:
 - stage: Build
